src/core-crm/objects/Communication_Queue__c/Communication_Queue__c.object-meta.xml
<CustomObject>
    <label>Communication Queue</label>
    <nameField>
        <displayFormat>CQ-{00000000}</displayFormat>
        <label>Communication Queue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Communication Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>