src/core-crm/objects/Communication_Queue__c/fields/ActionCadenceStepTrackerId__c.field-meta.xml
<CustomField>
    <fullName>ActionCadenceStepTrackerId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>ActionCadence Step Tracker Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>