src/core-crm/objects/Communication_Queue__c/fields/Business_Process__c.field-meta.xml
<CustomField>
    <fullName>Business_Process__c</fullName>
    <description>The Business process and Communication Type</description>
    <label>Business Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic Automated Cadence Email</fullName>
            </value>
            <value>
                <fullName>International Automated Cadence Email</fullName>
            </value>
            <value>
                <fullName>International Automated Cadence SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>