src/core-crm/objects/Communication_Queue__c/fields/Communication_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Communication_Endpoint__c</fullName>
    <description>Specify which email field of contact or lead  is used to send email to.</description>
    <label>Communication Endpoint</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WhoId</fullName>
                <default>true</default>
                <label>WhoId</label>
            </value>
            <value>
                <fullName>Contact.Email</fullName>
            </value>
            <value>
                <fullName>Contact.QUT_Staff_Email__c</fullName>
            </value>
            <value>
                <fullName>Contact.QUT_Learner_Email__c</fullName>
            </value>
            <value>
                <fullName>Contact.Work_Email__c</fullName>
            </value>
            <value>
                <fullName>Lead.Email</fullName>
            </value>
            <value>
                <fullName>Lead.Work_Email__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>