src/core-crm/objects/Communication_Queue__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>The Date of sending the email</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>