src/core-crm/objects/Communication_Queue__c/fields/Last_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Send_Date__c</fullName>
    <label>Last Send Date</label>
    <type>Date</type>
</CustomField>