src/core-crm/objects/Communication_Queue__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>The content of the message to be sent.</description>
    <label>Message</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>