src/core-crm/objects/Communication_Queue__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <description>Mobile Number that the SMS will be sent to for the related contact or lead</description>
    <label>Mobile</label>
    <length>13</length>
    <type>Text</type>
</CustomField>