src/core-crm/objects/Communication_Queue__c/fields/Related_SMS_Template__c.field-meta.xml
<CustomField>
    <fullName>Related_SMS_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to reference related SMS template</description>
    <label>Related SMS Template</label>
    <referenceTo>SMS_Template__c</referenceTo>
    <relationshipLabel>Communication Queues</relationshipLabel>
    <relationshipName>Communication_Queues</relationshipName>
    <type>Lookup</type>
</CustomField>