src/core-crm/objects/Communication_Queue__c/fields/Sender__c.field-meta.xml
<CustomField>
    <fullName>Sender__c</fullName>
    <label>Sender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>