src/core-crm/objects/Communication_Queue__c/fields/Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Template_Id__c</fullName>
    <label>Template Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>