src/core-crm/objects/Communication_Queue__c/fields/WhatId__c.field-meta.xml
<CustomField>
    <fullName>WhatId__c</fullName>
    <description>What represents nonhuman objects such as account, Opportunity, Campaign, Cases or Custom Related Objects</description>
    <label>What Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>