src/core-crm/objects/Communication_Queue__c/fields/WhoId__c.field-meta.xml
<CustomField>
    <fullName>WhoId__c</fullName>
    <label>Who Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>