src/core-crm/objects/Communication_Queue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ActionCadenceStepTrackerId__c</columns>
    <columns>Business_Process__c</columns>
    <columns>Type__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Last_Send_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>Development_Team</group>
        <group>System_Administrator</group>
        <group>System_Administrator_Modify_All_Data</group>
        <group>System_Administrator_Read_Only</group>
    </sharedTo>
</ListView>